tests/rosetta/out/Java/blum-integer.error
javac error: exit status 1
/tmp/TestMochiToJavablum-integer2378816515/001/BlumInteger.java:89: error: incompatible types: int cannot be converted to String
                int q = Integer.parseInt((i / p));
                                            ^
/tmp/TestMochiToJavablum-integer2378816515/001/BlumInteger.java:96: error: incompatible types: double cannot be converted to Integer
                        counts.set(0, ((Number)counts.get(0)).doubleValue() + 1);
                                                                            ^
/tmp/TestMochiToJavablum-integer2378816515/001/BlumInteger.java:106: error: incompatible types: String cannot be converted to Number
                                line = ((Number)line + ((Number)padLeft(blum.get(idx), 3)).doubleValue()).doubleValue() + " ";
                                                ^
/tmp/TestMochiToJavablum-integer2378816515/001/BlumInteger.java:106: error: incompatible types: String cannot be converted to Number
                                line = ((Number)line + ((Number)padLeft(blum.get(idx), 3)).doubleValue()).doubleValue() + " ";
                                                                       ^
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
4 errors
